// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BudgetsNotification Testing BudgetsNotification LinkedAccounts Testing Should match snapshot: budgets-linked-accounts 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BudgetsNotificationBudget11111111111188E95F35": {
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage for 111111111111.",
          "BudgetType": "COST",
          "CostFilters": {
            "LinkedAccount": [
              "111111111111",
            ],
          },
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationBudget22222222222281269B64": {
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage for 222222222222.",
          "BudgetType": "COST",
          "CostFilters": {
            "LinkedAccount": [
              "222222222222",
            ],
          },
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationNotificationTopicDFB74E64": {
      "Properties": {
        "DisplayName": "budget-notification-586e7973-topic",
        "TopicName": "budget-notification-586e7973-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
    "BudgetsNotificationNotificationTopicPolicyD5C1A9D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": {
                "Service": "budgets.amazonaws.com",
              },
              "Resource": {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "AWSBudgetsSNSPublishingPermissions",
            },
            {
              "Action": [
                "sns:GetTopicAttributes",
                "sns:SetTopicAttributes",
                "sns:AddPermission",
                "sns:RemovePermission",
                "sns:DeleteTopic",
                "sns:Subscribe",
                "sns:ListSubscriptionsByTopic",
                "sns:Publish",
                "sns:Receive",
              ],
              "Condition": {
                "StringEquals": {
                  "AWS:SourceOwner": "123456789012",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "OwnerSNSActionPermissions",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "BudgetsNotificationSlackChannelConfigBE947213": {
      "Properties": {
        "ConfigurationName": "slack-channel-budget-notification-586e7973-config",
        "IamRoleArn": {
          "Fn::GetAtt": [
            "BudgetsNotificationSlackChannelConfigRole34A2F398",
            "Arn",
          ],
        },
        "LoggingLevel": "ERROR",
        "SlackChannelId": "XXXXXXXX",
        "SlackWorkspaceId": "T0XXXX111",
        "SnsTopicArns": [
          {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::Chatbot::SlackChannelConfiguration",
    },
    "BudgetsNotificationSlackChannelConfigRole34A2F398": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "chatbot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "slack channel budget notification config role.",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "cloudwatch:Describe*",
                    "cloudwatch:Get*",
                    "cloudwatch:List*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "chatbot-policy",
          },
        ],
        "RoleName": "slack-channel-budget-notification-586e7973-config-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`BudgetsNotification Testing BudgetsNotification Normal Testing Should match snapshot: budgets-normal 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BudgetsNotificationBudgetB79C7685": {
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage",
          "BudgetType": "COST",
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationNotificationTopicDFB74E64": {
      "Properties": {
        "DisplayName": "budget-notification-586e7973-topic",
        "TopicName": "budget-notification-586e7973-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
    "BudgetsNotificationNotificationTopicPolicyD5C1A9D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": {
                "Service": "budgets.amazonaws.com",
              },
              "Resource": {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "AWSBudgetsSNSPublishingPermissions",
            },
            {
              "Action": [
                "sns:GetTopicAttributes",
                "sns:SetTopicAttributes",
                "sns:AddPermission",
                "sns:RemovePermission",
                "sns:DeleteTopic",
                "sns:Subscribe",
                "sns:ListSubscriptionsByTopic",
                "sns:Publish",
                "sns:Receive",
              ],
              "Condition": {
                "StringEquals": {
                  "AWS:SourceOwner": "123456789012",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "OwnerSNSActionPermissions",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "BudgetsNotificationSlackChannelConfigBE947213": {
      "Properties": {
        "ConfigurationName": "slack-channel-budget-notification-586e7973-config",
        "IamRoleArn": {
          "Fn::GetAtt": [
            "BudgetsNotificationSlackChannelConfigRole34A2F398",
            "Arn",
          ],
        },
        "LoggingLevel": "ERROR",
        "SlackChannelId": "XXXXXXXX",
        "SlackWorkspaceId": "T0XXXX111",
        "SnsTopicArns": [
          {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::Chatbot::SlackChannelConfiguration",
    },
    "BudgetsNotificationSlackChannelConfigRole34A2F398": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "chatbot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "slack channel budget notification config role.",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "cloudwatch:Describe*",
                    "cloudwatch:Get*",
                    "cloudwatch:List*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "chatbot-policy",
          },
        ],
        "RoleName": "slack-channel-budget-notification-586e7973-config-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
